# src/controller/profissionaisController.js
@@ -2,16 +2,6 @@ const profissional = require("../models/profissionaisModel")
 const jwt = require("jsonwebtoken")
 const SECRET = process.env.SECRET
 
-// const getAll = (req, res) => {
-//   profissional.find((err, profissional) => {
-//     if (err) {
-//       res.status(500).send({ message: err.message });
-//     } else {
-//       res.status(200).json(profissional);
-//     }
-//   });
-// };
-
 const getAll = async (req, res) => {
   try {
     const allProfissionais = await profissional.find();
@@ -52,15 +42,7 @@ const getByProfissao = (req, res) => {
 
 const createProfissional = async (req, res) => {
   try {
-    // const authHeader = req.get("autorizada")
-    // if (!authHeader) {
-    //   return res.status(401).json("você precisa de autorização")
-    // }
-    // const token = authHeader.split(" ")[1]
-    // await jwt.verify(token, SECRET, async function (erro) {
-    //   if (erro) {
-    //     return res.status(403).send("Acesso negado")
-    //   }
+
       const allprofissionais = await profissional.find()
       res.status(200).json(allprofissionais)
     
@@ -83,29 +65,35 @@ const createProfissional = async (req, res) => {
   }
 };
 
-const updateProfissional = async (req, res) => {
-  try {
-    const { nome, cidade, telefone, email } = req.body;
 
-    const updatedProfissional = await profissional.findByIdAndUpdate(req.params.id, {
-        nome,
-        profissao,
-        bairro,
-        atendimentoRemoto,
-        telefone,
-        site,
-    });
-    res.status(200).json(updatedProfissional);
-  } catch (error) {
-    console.error(error);
-    res.status(500).json({ message: error.message });
-  }
-};
+const updateProfissional = async (req, res) => {
+   
+          const { nome, profissao, bairro, atendimentoRemoto, telefone, site } = req.body
+          const { _id } = req.params
+
+          const findProfissional = await profissional.findById(_id)
+
+          if (findProfissional == null) {
+              return res.status(404).json({ message: "id inválido" })
+          }
+
+          findProfissional.nome = nome || findProfissional.nome
+          findProfissional.profissao = profissao || findProfissional.profissao
+          findProfissional.bairro = bairro || findProfissional.bairro
+          findProfissional.atendimentoRemoto = atendimentoRemoto || findProfissional.atendimentoRemoto
+          findProfissional.telefone = telefone || findProfissional.telefone
+          findProfissional.site = site || findProfissional.site
+
+          const savedProfissional = findProfissional.save()
+          res.status(200).json({ message: "profissional atualizada com sucesso!", savedProfissional })
+      }
+  
+  
 
 const deleteProfissional = (req, res) => {
-  const id = req.params.id;
+  const id = req.params.id
 
-  doulas.findByIdAndDelete(id, (err) => {
+  profissional.findByIdAndDelete(id, (err) => {
     if (!err) {
       res.status(200).json({ message: "Profissional excluída com sucesso" });
     } else {
